--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -14,18 +14,28 @@
         android:layout_width="match_parent"
         android:layout_weight="2"
         android:layout_height="0dp">
-        <TextView
-            android:id="@+id/text_tracker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0.0"
-            android:textSize="50dp"
-            android:layout_centerInParent="true"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Max Speed"
-            android:textSize="18sp"/>
+            android:id="@+id/text_tracker" />
+        <ImageButton
+            android:id="@+id/play"
+            android:layout_marginLeft="110dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/play_arrow"/>
+        <ImageButton
+            android:id="@+id/stop"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_toRightOf="@+id/play"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/ic_baseline_stop_24"/>
+
+
+
     </RelativeLayout>
     <GridLayout
         android:columnCount="2"
