--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.gallery.MapFragment" >
+    tools:context=".ui.map.MapFragment" >
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
