--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -6,9 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/wave"
     android:weightSum="10"
-    tools:context=".ui.home.TrackerFragment" >
+    tools:context=".ui.tracker.TrackerFragment" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,22 +18,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text_tracker" />
+
+<!--        TODO: investigate why button play and stop too little on start-->
         <ImageButton
             android:id="@+id/play"
             android:layout_marginLeft="110dp"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginTop="20dp"
+            android:background="#00000000"
             android:src="@drawable/play_arrow"/>
         <ImageButton
             android:id="@+id/stop"
+            android:visibility="gone"
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:background="#00000000"
             android:layout_toRightOf="@+id/play"
             android:layout_marginTop="20dp"
-            android:src="@drawable/ic_baseline_stop_24"/>
-
-
+            android:src="@drawable/ic_baseline_play_circle"/>
 
     </RelativeLayout>
     <GridLayout
