--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,7 +21,7 @@
         <item
             android:id="@+id/nav_profil"
             android:icon="@drawable/ic_baseline_accessibility_new_24"
-            android:title="@string/profil" />
+            android:title="@string/profile" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
