--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -9,36 +9,31 @@
     android:weightSum="10"
     tools:context=".ui.tracker.TrackerFragment" >
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_weight="2"
+        android:gravity="center"
         android:layout_height="0dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text_tracker" />
 
 <!--        TODO: investigate why button play and stop too little on start-->
         <ImageButton
-            android:id="@+id/play"
-            android:layout_marginLeft="110dp"
+            android:id="@+id/button_play_pause"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_marginTop="20dp"
             android:background="#00000000"
             android:src="@drawable/play_arrow"/>
         <ImageButton
             android:id="@+id/stop"
+            android:layout_gravity="center"
             android:visibility="gone"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="#00000000"
-            android:layout_toRightOf="@+id/play"
-            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@+id/button_play_pause"
             android:src="@drawable/ic_baseline_play_circle"/>
 
-    </RelativeLayout>
+    </LinearLayout>
     <GridLayout
         android:columnCount="2"
         android:rowCount="3"
