--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,6 +21,7 @@
                 android:textSize="25sp"
                 android:textColor="@color/colorPrimaryDark"/>
             <TextView
+                android:id="@+id/textMode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Light"/>
