--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="backgroundColor">#D3D3D3</color>
     <color name="cardBackgroundColor">#ffffff</color>
-    <color name="textColor">#FF7A21</color>
-    <color name="tintColor">#ffffff</color>
+    <color name="textColor">@color/colorPrimaryDark</color>
+    <color name="tintColor">#D3D3D3</color>
     <color name="buttonColor">@color/colorPrimary</color>
 </resources>
