--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
     </group>
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_profil"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_baseline_accessibility_new_24"
             android:title="@string/profile" />
         <item
