--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,7 +23,7 @@
         android:label="@string/history"
         tools:layout="@layout/fragment_history" />
     <fragment
-        android:id="@+id/nav_profil"
+        android:id="@+id/nav_profile"
         android:name="com.example.biketracker.ui.profile.ProfileFragment"
         android:label="@string/profile"
         tools:layout="@layout/fragment_profile" />
