--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -52,7 +52,7 @@
             android:entries="@array/language_option"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textLanguage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
