--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -22,7 +22,8 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="#00000000"
-            android:src="@drawable/baseline_play"/>
+            android:contentDescription="play / pause button"
+            android:src="@drawable/baseline_play" />
         <ImageButton
             android:id="@+id/button_stop"
             android:layout_gravity="center"
