--- a/app/src/main/res/layout-v21/fragment_tracker.xml
+++ b/app/src/main/res/layout-v21/fragment_tracker.xml
@@ -16,7 +16,6 @@
         android:gravity="center"
         android:layout_height="0dp">
 
-<!--        TODO: investigate why button play and stop too little on start-->
         <ImageButton
             android:id="@+id/button_play_pause"
             android:layout_width="70dp"
@@ -24,16 +23,15 @@
             android:background="#00000000"
             android:contentDescription="@string/play_pause_button"
             android:src="@drawable/baseline_play" />
-
         <ImageButton
             android:id="@+id/button_stop"
+            android:layout_gravity="center"
+            android:visibility="gone"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:layout_gravity="center"
             android:background="#00000000"
-            android:contentDescription="@string/button_stop"
             android:src="@drawable/baseline_stop"
-            android:visibility="gone" />
+            android:contentDescription="@string/todo" />
 
     </LinearLayout>
     <GridLayout
@@ -56,7 +54,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-           android:layout_columnWeight="1" tools:targetApi="lollipop">
+           android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -68,9 +66,9 @@
                     android:src="@drawable/time"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/time_picture" />
+                    android:contentDescription="@string/todo" />
                 <TextView
-                    android:text="@string/time_value"
+                    android:text="@string/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
@@ -81,7 +79,7 @@
                     android:id="@+id/chronometer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/climb_value"/>
+                    android:text="@string/_0_0"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <!--Row 2-->
@@ -94,7 +92,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:layout_columnWeight="1" tools:targetApi="lollipop">
+            android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -102,14 +100,13 @@
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:layout_height="wrap_content">
-
                 <ImageView
+                    android:src="@drawable/road"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/distance_picture"
-                    android:src="@drawable/road" />
+                    android:contentDescription="@string/todo" />
                 <TextView
-                    android:text="@string/distance_value"
+                    android:text="@string/distanse"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
@@ -120,7 +117,7 @@
                     android:id="@+id/distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/distances_value"/>
+                    android:text="@string/_0_0"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <!--Row 3-->
@@ -133,7 +130,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:layout_columnWeight="1" tools:targetApi="lollipop">
+            android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -143,10 +140,10 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
+                    android:src="@drawable/speed_two"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/speed_picture"
-                    android:src="@drawable/speed_two" />
+                    android:contentDescription="@string/todo" />
                 <TextView
                     android:text="@string/speed"
                     android:layout_width="wrap_content"
@@ -158,7 +155,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/speeds_value"/>
+                    android:text="@string/_0_0"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <!--Row 4-->
@@ -171,7 +168,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:layout_columnWeight="1" tools:targetApi="lollipop">
+            android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -179,12 +176,11 @@
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:layout_height="wrap_content">
-
                 <ImageView
+                    android:src="@drawable/speed_three"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/average_speed_picture"
-                    android:src="@drawable/speed_three" />
+                    android:contentDescription="@string/todo" />
                 <TextView
                     android:text="@string/average_speed"
                     android:layout_width="wrap_content"
@@ -196,7 +192,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/average_speeds_value"/>
+                    android:text="0.0"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <!--Row 5-->
@@ -209,7 +205,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:layout_columnWeight="1" tools:targetApi="lollipop">
+            android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -221,7 +217,7 @@
                     android:src="@drawable/mountain"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/climb_picture" />
+                    android:contentDescription="@string/todo" />
                 <TextView
                     android:text="@string/climb"
                     android:layout_width="wrap_content"
@@ -233,7 +229,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/climbs_value"/>
+                    android:text="@string/climb_value"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
         <!--Row 6-->
@@ -246,7 +242,7 @@
             android:layout_marginRight="8dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:layout_columnWeight="1" tools:targetApi="lollipop">
+            android:layout_columnWeight="1">
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="wrap_content"
@@ -258,7 +254,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:contentDescription="@string/calorie_picture"
+                    android:contentDescription="@string/todo"
                     android:src="@drawable/calories" />
                 <TextView
                     android:text="@string/calorie"
@@ -271,7 +267,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/calories_value"/>
+                    android:text="@string/calorie_value"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
