--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/settings" />
     <item
-        android:id="@+id/nav_share"
+        android:id="@+id/bar_nav_share"
         android:icon="@drawable/ic_baseline_share_24"
         android:title="@string/share" />
     </group>
