--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,15 +1,14 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-<!--        <item name="android:windowTranslucentNavigation">true</item>-->
-<!--        <item name="android:navigationBarColor">@android:color/transparent</item>-->
-        <item name="backgroundColor">#D3D3D3</item>
-        <item name="cardBackgroundColor">#ffffff</item>
-q    </style>
+
+        <item name="colorPrimaryVariant">@color/colorPrimaryTitleColor</item>
+        <item name="android:windowBackground">@color/colorPrimary</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
