Add Firebase dependencies. Change structure in profil_fragment.

--- a/app/src/main/res/layout/custom_age_layout.xml
+++ b/app/src/main/res/layout/custom_age_layout.xml
@@ -10,6 +10,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/ed_text_age"
         android:inputType="numberSigned"
-        android:hint="Enter your age here "/>
+        android:hint="@string/enter_your_age_here"/>
 
 </LinearLayout>
