--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,142 +6,162 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:id="@+id/linerName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="35dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textViewName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:layout_weight="2"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/colorAccent"
+        android:padding="15dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:id="@+id/linerName">
+        android:orientation="horizontal"
+        android:padding="35dp"
+        android:id="@+id/linerAge">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="@string/name"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:id="@+id/textViewName"
-            android:text="0"/>
-    </LinearLayout>
-    <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dp" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:id="@+id/linerAge">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:layout_weight="1"
             android:text="@string/age"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:layout_weight="2"
             android:id="@+id/textViewAge"
             android:text="0"/>
     </LinearLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1px"
+        android:background="@color/colorAccent"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
+        android:orientation="horizontal"
+        android:padding="35dp"
         android:id="@+id/linerSex">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sex"
+            android:layout_weight="1"
             android:textSize="20sp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:layout_weight="2"
             android:id="@+id/textViewSex"
             android:text="@string/male"/>
     </LinearLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1px"
+        android:background="@color/colorAccent"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
+        android:orientation="horizontal"
+        android:padding="35dp"
         android:id="@+id/linerWeight">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:layout_weight="1"
             android:text="@string/weight"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:layout_weight="2"
+            android:textSize="20sp"
             android:id="@+id/textViewWeight"
             android:text="0,0"/>
     </LinearLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"/>
+        android:layout_height="1px"
+        android:background="@color/colorAccent"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
+        android:orientation="horizontal"
+        android:padding="35dp"
         android:id="@+id/linerHeight">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
+            android:layout_weight="1"
             android:textStyle="bold"
             android:text="@string/height"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:layout_weight="2"
             android:id="@+id/textViewHeight"
             android:text="0"/>
 
     </LinearLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1px"
+        android:background="@color/colorAccent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="20dp"
+        android:orientation="horizontal"
+        android:padding="35dp"
         android:id="@+id/linerBike">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/bike"
+            android:layout_weight="1"
             android:textSize="20sp"
             android:textStyle="bold"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="20sp"
+            android:layout_weight="2"
             android:id="@+id/textViewBike"
             android:text="@string/city_bicycle"/>
     </LinearLayout>
     <View
         android:layout_width="wrap_content"
-        android:layout_height="1dp" />
+        android:layout_height="1px"
+        android:background="@color/colorAccent"/>
 
 </LinearLayout>
