--- a/app/src/main/res/values-uk-rUA/stringlang.xml
+++ b/app/src/main/res/values-uk-rUA/stringlang.xml
@@ -70,6 +70,19 @@
     <string name="group4">Група4</string>
     <string name="group5">Група5</string>
     <string name="group6">Група6</string>
+    <string name="toastCorectValue">Будь ласка, введіть коректне значення!</string>
+    <string name="alertTextWeight">Введіть свою вагу</string>
+    <string name="alertTextName">Введіть своє ім\'я</string>
+    <string name="alertTextSex">Виберіть свою стать</string>
+    <string name="alertTextBike">Виберіть свій велосипед</string>
+    <string name="posBtnOk">OK</string>
+    <string name="alertTextAge">Введіть свій вік</string>
+    <string name="alertTextHeight">Введіть свій зріст</string>
+    <string name="enter_your_age_here">Введіть свій вік тут</string>
+    <string name="enter_your_height_here">Введіть свій зріст тут</string>
+    <string name="enter_your_weight_here">Введіть свою вагу тут</string>
+    <string name="enter_your_name_here">Введіть свіє ім\'я тут</string>
+
 
     <string-array name="group2">
         <item>item1</item>
