--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,6 @@
             android:layout_margin="60dp"
             android:layout_marginTop="70dp"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"/>
+            android:textColor="?attr/colorPrimaryDark"/>
     </LinearLayout>
 </FrameLayout>
