Change applications icon. Implements animation for start activity_main.xml

--- a/app/src/main/res/drawable/gradient1.xml
+++ b/app/src/main/res/drawable/gradient1.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="225"
-        android:endColor="#FB9908"
-        android:startColor="#FDD763"/>
+        android:endColor="#FFFB00"
+        android:startColor="#FF6600"/>
 </shape>
